<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#07A1F4">

    <RelativeLayout
        android:id="@+id/relative_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp">

        <TextView
            android:layout_marginStart="10dp"
            android:id="@+id/text_view_player_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="@string/player_one"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/light_font"
            android:shadowColor="@color/text_shadow"
            android:shadowRadius="2"
            android:shadowDx="3"
            android:shadowDy="3"/>

        <TextView
            android:layout_marginStart="10dp"
            android:id="@+id/text_view_p1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="@string/player_1"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/light_font"
            android:shadowColor="@color/text_shadow"
            android:shadowRadius="2"
            android:shadowDx="3"
            android:shadowDy="3"
            android:layout_toEndOf="@id/text_view_player_one"/>

        <TextView
            android:layout_below="@+id/text_view_player_one"
            android:layout_marginStart="10dp"
            android:id="@+id/text_view_player_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="@string/player_two"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/light_font"
            android:shadowColor="@color/text_shadow"
            android:shadowRadius="2"
            android:shadowDx="3"
            android:shadowDy="3"/>

        <TextView
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/text_view_player_two"
            android:id="@+id/text_view_p2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_below="@+id/text_view_p1"
            android:freezesText="true"
            android:text="@string/player_2"
            android:textColorHint="#ECECEC"
            android:textSize="30sp"
            android:textColor="@color/light_font"
            android:shadowColor="@color/text_shadow"
            android:shadowRadius="2"
            android:shadowDx="3"
            android:shadowDy="3"/>

        <Button
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="23dp"
            android:textSize="18sp"
            android:text="@string/reset_game"
            android:textStyle="bold"
            android:background="@drawable/input_design"
            android:textColor="@color/light_font"
            android:shadowColor="@color/text_shadow"
            android:shadowRadius="2"
            android:shadowDx="3"
            android:shadowDy="3"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_00"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="60sp"
            android:freezesText="true"
            android:layout_margin="6dp"
            android:textStyle="bold"
            android:background="@drawable/input_design"
            android:textColor="@color/light_font"
            android:shadowColor="@color/text_shadow"
            android:shadowRadius="8"
            android:shadowDx="13"
            android:shadowDy="8"/>

        <Button
            android:id="@+id/button_01"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="60sp"
            android:freezesText="true"
            android:layout_margin="7dp"
            android:textStyle="bold"
            android:background="@drawable/input_design"
            android:textColor="@color/light_font"
            android:shadowColor="@color/text_shadow"
            android:shadowRadius="8"
            android:shadowDx="13"
            android:shadowDy="8"/>

        <Button
            android:id="@+id/button_02"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="60sp"
            android:freezesText="true"
            android:layout_margin="6dp"
            android:textStyle="bold"
            android:background="@drawable/input_design"
            android:textColor="@color/light_font"
            android:shadowColor="@color/text_shadow"
            android:shadowRadius="8"
            android:shadowDx="13"
            android:shadowDy="8"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_10"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="60sp"
            android:freezesText="true"
            android:layout_margin="6dp"
            android:textStyle="bold"
            android:background="@drawable/input_design"
            android:textColor="@color/light_font"
            android:shadowColor="@color/text_shadow"
            android:shadowRadius="8"
            android:shadowDx="13"
            android:shadowDy="8"/>

        <Button
            android:id="@+id/button_11"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="60sp"
            android:freezesText="true"
            android:layout_margin="7dp"
            android:textStyle="bold"
            android:background="@drawable/input_design"
            android:textColor="@color/light_font"
            android:shadowColor="@color/text_shadow"
            android:shadowRadius="8"
            android:shadowDx="13"
            android:shadowDy="8"/>

        <Button
            android:id="@+id/button_12"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="60sp"
            android:freezesText="true"
            android:layout_margin="6dp"
            android:textStyle="bold"
            android:background="@drawable/input_design"
            android:textColor="@color/light_font"
            android:shadowColor="@color/text_shadow"
            android:shadowRadius="8"
            android:shadowDx="13"
            android:shadowDy="8"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_20"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="60sp"
            android:freezesText="true"
            android:layout_margin="6dp"
            android:textStyle="bold"
            android:background="@drawable/input_design"
            android:textColor="@color/light_font"
            android:shadowColor="@color/text_shadow"
            android:shadowRadius="8"
            android:shadowDx="13"
            android:shadowDy="8"/>

        <Button
            android:id="@+id/button_21"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="60sp"
            android:freezesText="true"
            android:layout_margin="7dp"
            android:textStyle="bold"
            android:background="@drawable/input_design"
            android:textColor="@color/light_font"
            android:shadowColor="@color/text_shadow"
            android:shadowRadius="8"
            android:shadowDx="13"
            android:shadowDy="8"/>

        <Button
            android:id="@+id/button_22"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="60sp"
            android:freezesText="true"
            android:layout_margin="6dp"
            android:textStyle="bold"
            android:background="@drawable/input_design"
            android:textColor="@color/light_font"
            android:shadowColor="@color/text_shadow"
            android:shadowRadius="8"
            android:shadowDx="13"
            android:shadowDy="8"/>

    </LinearLayout>

</LinearLayout>